Fix: Add min/max validation for year input, Alert in case of error now working. Add spacing to customer form

--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,11 @@ p, .font-lato-light {
   border-radius: 50%;
 }
 
+/* seems to be broken in bootstrap */
+.mr-2 {
+  margin-right: 0.5rem !important;
+}
+
 input.invalid:active, input.invalid:focus,
 select.invalid:active, select.invalid:focus {
   border-color: #d53118 !important;
